--- a/index.html
+++ b/index.html
@@ -16,27 +16,27 @@
             <button class="number">7</button>
             <button class="number">8</button>
             <button class="number">9</button>
-            <button>/</button>
+            <button class="op divide">/</button>
         </div>
 
         <div class="second">
             <button class="number">4</button>
             <button class="number">5</button>
             <button class="number">6</button>
-            <button>x</button>
+            <button class="op multiply">x</button>
         </div>
 
         <div class="second">    
             <button class="number">1</button>
             <button class="number">2</button>
             <button class="number">3</button>
-            <button>-</button>
+            <button class="op subtract">-</button>
         </div>
 
         <div class="second">
             <button class="number">0</button>
-            <button>.</button>
-            <button>+</button>
+            <button class="clear">C</button>
+            <button class="op add">+</button>
             <button class="orange">=</button>
         </div>
     </div>
