Implementation "dot" and UI rework

--- a/index.html
+++ b/index.html
@@ -12,6 +12,14 @@
     <div class="container">
         <div class="second" id="display">
         </div>
+
+        <div class="second">
+            <button class="dot">.</button>
+            <button class="clear">C</button>
+            <button class="op add">+</button>
+            <button class="orange">=</button>
+        </div>
+
         <div class="second">
             <button class="number">7</button>
             <button class="number">8</button>
@@ -34,10 +42,7 @@
         </div>
 
         <div class="second">
-            <button class="number">0</button>
-            <button class="clear">C</button>
-            <button class="op add">+</button>
-            <button class="orange">=</button>
+            <button class="number" id="zero">0</button>
         </div>
     </div>
 </body>
