--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="second">
             <button class="dot">.</button>
             <button class="clear">C</button>
-            <button class="op add">+</button>
+            <button class="op" id="add">+</button>
             <button class="orange">=</button>
         </div>
 
@@ -24,21 +24,21 @@
             <button class="number">7</button>
             <button class="number">8</button>
             <button class="number">9</button>
-            <button class="op divide">/</button>
+            <button class="op" id="divide">/</button>
         </div>
 
         <div class="second">
             <button class="number">4</button>
             <button class="number">5</button>
             <button class="number">6</button>
-            <button class="op multiply">x</button>
+            <button class="op" id="multiply">x</button>
         </div>
 
         <div class="second">    
             <button class="number">1</button>
             <button class="number">2</button>
             <button class="number">3</button>
-            <button class="op subtract">-</button>
+            <button class="op" id="subtract">-</button>
         </div>
 
         <div class="second">
